# jsr-operation-xgm-euxfel-paper

./: .gitignore  pyproject.toml  readme.md
binder/: start
binder/scripts/: data-archive  data-extract
notebooks/: figure_5.ipynb  figure_6.ipynb  figure_8.ipynb  r149_xgm_comparison.ipynb  r183.ipynb  readme.ipynb
